# webscrapping_chatbot_test_

./: .env  README.md  bot_interaction_py  bot_retrieval_.py  chatbot_in_rag_framework_.py  db_operations_postgre_.py  new_retrieval_.py  prompts_.py  pyproject.toml  rag_setup_.py  requirements.txt  test_chromadb_.py  webscrapping_.py
.github/agents/: help-me-code-properly.agent.md
chroma_db/: chroma.sqlite3
ww2_chroma_db/: chroma.sqlite3
